# LangChain_RAG1

./: .gitignore  .pre-commit-config.yaml  README.md  Rag1_Add_Docs.ipynb  Rag1_Query.ipynb  justfile  main.py  pyproject.toml  rag1_add_docs.py  rag1a.ipynb  rag1b.ipynb  rag_sample.txt
data/: rag_sample1.txt
docs/: RAG_Learning_Readmap.md
notebook/: Rag1_Add_Docs.ipynb  Rag1_Query.ipynb
src/: rag1_add_docs.py  rag1_query.py
